# mongodb-pyspark-api

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  main.py
database/notebooks/: mongo_docker_teste.ipynb
