[tool.poetry]
name = "trabalho final"
version = "0.1.0"
description = ""
authors = ["diego medeiros <diego.medeiros.071@ufrn.edu.br>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.1"
findspark = "^2.0.1"
pymongo = "^4.3.3"
pandas = "^1.5.2"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.19.3"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
